@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.38 2005/01/15 09:37:48 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.39 2005/01/15 19:37:27 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   15 Jan 2004; Andrew Gaffney <agaffney@gentoo.org>
   USE flag editor in MakeDotConf.py. Fix double spacing issue for USE flags.
   USE flag editor now generated proper + and - USE line. CFLAGS ComboBoxes
-  and Entry in MakeDotConf. CFLAGS is set in InstallProfile.
+  and Entry in MakeDotConf. CFLAGS is set in InstallProfile. MakeDotConf does
+  CHOST, ACCEPT_KEYWORDS, MAKEOPTS, and FEATURES.
 
   14 Jan 2005; John Laliberte <allanonl@bu.edu>
   Timezone.py - fixed bug where after selecting a timezone, it would jump
